Make input buttons smaller. Fix select field spacing.

--- a/src/app/notebook/components/stick-input/stick-input.component.css
+++ b/src/app/notebook/components/stick-input/stick-input.component.css
@@ -1,7 +1,7 @@
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(3, 60px);
-  grid-template-rows: repeat(4, 60px);
+  grid-template-columns: repeat(3, 40px);
+  grid-template-rows: repeat(4, 40px);
   grid-gap: 10px;
 }
 
@@ -12,6 +12,8 @@
 mat-form-field {
   grid-column: 1 / -1;
   grid-row: 1;
+  width: initial;
+  align-self: center;
 }
 
 button {
